Fixed mobile menu button not visible on mobile. Added project (portfolio).

--- a/resources/scss/static/sidebar.scss
+++ b/resources/scss/static/sidebar.scss
@@ -186,7 +186,7 @@
     width: 60px;
     height: 60px;
     text-align: center;
-    display: inline-block;
+    display: none;
     line-height: 60px;
 
     @media screen and (max-width: 845px) {
@@ -206,16 +206,12 @@
     width: 100%;
     height: 60px;
     text-align: center;
-    display: inline-block;
+    display: none;
     line-height: 60px;
 
     @media screen and (max-width: 845px) {
         display: inline-block;
     }
-}
-
-#menu-toggle, #menu-close {
-    display: none;
 }
 
 .main-nav {
